syntax = "proto3";
package MeshUtils;

service MeshSlicer {
  rpc UploadMesh(Mesh) returns (MeshID) {}
  rpc ReleaseMesh(MeshID) returns(OkReply) {}
  rpc GetContour(ContourRequest) returns (Polygons) {}
  rpc KeepAlive(MeshID) returns (OkReply) {}
}

message Vec2 {
  float x = 1;
  float y = 2;
}

message Polygon {
  repeated Vec2 points = 1;
}

message Polygons {
  repeated Polygon polygons = 1;
}

message Vec3 {
  float x = 1;
  float y = 2;
  float z = 3;
}

message Facet {
  Vec3 v0 = 1;
  Vec3 v1 = 2;
  Vec3 v2 = 3;
}

message Mesh {
  repeated Facet facets = 1;
}

message ContourRequest {
  uint32 uuid = 1;
  float z = 2;
}

message MeshID {
  uint32 uuid = 1;
}

message OkReply {
  bool ok = 1;
}
